# xuanze-skill

./: .gitignore  README.md  SKILL.md  pyproject.toml  requirements.txt
examples/: __init__.py  example_college.md  example_lunch.md
prompts/: __init__.py  long_term.txt  mbti_quiz.json  short_term.txt
tests/: __init__.py  test_decision_engine.py  test_history.py  test_models_checkpoint.py  test_preference_scorer.py  test_profile_manager.py  test_visualizer.py
xuanze_core/: __init__.py  decision_engine.py  exporter.py  history.py  models.py  onboarding.py  preference_scorer.py  profile_manager.py  skill_api.py  visualizer.py
